édition texte resto 4

--- a/restaurant_4.html
+++ b/restaurant_4.html
@@ -28,7 +28,7 @@
                 <div class="titre_icone main_titre_menu">
                     <div class="titre_lieu">
                         <a href="restaurant_1.html">
-                            <h2 class="titre" id="main_titre_menu">La palette du goût</h2>
+                            <h2 class="titre" id="main_titre_menu">Le délice des sens</h2>
                         </a>
                     </div>
 
@@ -62,8 +62,8 @@
                         <hr />
                         <button class="entree_element element_1">
                             <div class="titre_element">
-                                <h2>Fricassée d'escargot</h2>
-                                <h3>Au piment d'espelette</h3>
+                                <h2>Tartare de thon</h2>
+                                <h3>Assaisonné au yuzu</h3>
                             </div>
                             <div class="prix_element">
                                 <h3>25€</h3>
@@ -76,8 +76,8 @@
                         </button>
                         <button class="entree_element element_2">
                             <div class="titre_element">
-                                <h2>fois gras de canard mi-cuit</h2>
-                                <h3>et ses copeaux de truffe noire</h3>
+                                <h2>Bouchée de homard croustillant</h2>
+                                <h3>Et sa farandole de petits légumes</h3>
                             </div>
                             <div class="prix_element">
                                 <h3>35€</h3>
@@ -88,8 +88,8 @@
                         </button>
                         <button class="entree_element element_3">
                             <div class="titre_element">
-                                <h2>Oeuf au plat</h2>
-                                <h3>Assaisonné à la truffe sur lit de caviar</h3>
+                                <h2>Velouté de cèpes</h2>
+                                <h3>Aux truffes</h3>
                             </div>
                             <div class="prix_element">
                                 <h3>20€</h3>
@@ -104,8 +104,8 @@
                         <hr />
                         <button class="plats_element  element_1">
                             <div class="titre_element">
-                                <h2>Filet de boeuf aux herbes</h2>
-                                <h3>Accompagné de sa ribambelle de légumes</h3>
+                                <h2>Poulet rôti aux herbes de Provence</h2>
+                                <h3>Et sa crème de truffe</h3>
                             </div>
                             <div class="prix_element">
                                 <h3>40€</h3>
@@ -118,8 +118,8 @@
                         </button>
                         <button class="plats_element element_2">
                             <div class="titre_element">
-                                <h2>Parmentier de queue de boeuf</h2>
-                                <h3>À la truffe noire sur sa purée de panais</h3>
+                                <h2>Langouste rôtie</h2>
+                                <h3>Et ses légumes de saison</h3>
                             </div>
                             <div class="prix_element">
                                 <h3>35€</h3>
@@ -130,8 +130,8 @@
                         </button>
                         <button class="plats_element element_3">
                             <div class="titre_element">
-                                <h2>Filet de turbot</h2>
-                                <h3>Aux agrumes</h3>
+                                <h2>Côte de boeuf Angus </h2>
+                                <h3>Et sa purée de panais</h3>
                             </div>
                             <div class="prix_element">
                                 <h3>44€</h3>
@@ -146,8 +146,8 @@
                         <hr />
                         <button class="desserts_element  element_1">
                             <div class="titre_element">
-                                <h2>Paris-Brest</h2>
-                                <h3>Revisité</h3>
+                                <h2>Farandole de desserts</h2>
+                                <h3>Du chef</h3>
                             </div>
                             <div class="prix_element">
                                 <h3>18€</h3>
@@ -160,8 +160,8 @@
                         </button>
                         <button class="desserts_element element_2">
                             <div class="titre_element">
-                                <h2> Macaron au chocolat d'exception </h2>
-                                <h3>Et glace à la vanille de Madagascar</h3>
+                                <h2>Crème brulée </h2>
+                                <h3>Revisitée</h3>
                             </div>
                             <div class="prix_element">
                                 <h3>22€</h3>
@@ -172,8 +172,8 @@
                         </button>
                         <button class="desserts_element element_3">
                             <div class="titre_element">
-                                <h2>Mousse au chocolat</h2>
-                                <h3>Au piment d'Espelette et à la truffe noire</h3>
+                                <h2>Tiramisu</h2>
+                                <h3>À la noisette</h3>
                             </div>
                             <div class="prix_element">
                                 <h3>23€</h3>
