centrer bouton explorer

--- a/index.html
+++ b/index.html
@@ -35,11 +35,9 @@
             <h1>Réservez le menu qui vous convient</h1>
             <h2 id="sous_titre_decouvrez">Découvrez des restaurants d'exception séléctionnés par nos soins.</h2>
 
-            <div id="button_explore">
-                <button>
+                <button id="button_explore">
                     <a href="#restaurants">Explorer nos restaurants</a>
                 </button>
-            </div>
 
         </div>
 
