taille bouton commander

--- a/restaurant_1.html
+++ b/restaurant_1.html
@@ -184,12 +184,11 @@
                         </button>
                     </div>
                 </div>
-                <div id="button_explore" class="button_commander">
-                    <button>
-                        <a href="#">Commander</a>
-                    </button>
-                </div>
+
             </div>
+            <button id="button_explore" class="button_commander">
+                <a href="#">Commander</a>
+            </button>
         </div>
 
 
