--- a/restaurant_2.html
+++ b/restaurant_2.html
@@ -197,12 +197,10 @@
                         </button>
                     </div>
                 </div>
-                <div id="button_explore" class="button_commander">
-                    <button>
-                        <a href="#">Commander</a>
-                    </button>
-                </div>
             </div>
+            <button id="button_explore" class="button_commander">
+                <a href="#">Commander</a>
+            </button>
         </div>
 
 
