--- a/restaurant_4.html
+++ b/restaurant_4.html
@@ -185,11 +185,11 @@
                     </div>
                 </div>
                 <div id="button_explore" class="button_commander">
-                    <button>
-                        <a href="#">Commander</a>
-                    </button>
                 </div>
             </div>
+            <button id="button_explore" class="button_commander">
+                <a href="#">Commander</a>
+            </button>
         </div>
 
 
