edition footer pour lien mail dans toutes les  pages

--- a/index.html
+++ b/index.html
@@ -258,7 +258,9 @@
         </div>
 
         <h2>Mentions légales</h2>
-        <h2>Contact</h2>
+        <a  class="lien_contact" href="mailto:alexistroitzky@gmail.com">
+            <h2>Contact</h2>
+        </a>
 
     </footer>
 
