--- a/restaurant_2.html
+++ b/restaurant_2.html
@@ -222,7 +222,9 @@
         </div>
 
         <h1>Mentions légales</h1>
-        <h1>Contact</h1>
+        <a  class="lien_contact" href="mailto:alexistroitzky@gmail.com">
+            <h2>Contact</h2>
+        </a>
 
     </footer>
 
