--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
             <h1>Réservez le menu qui vous convient</h1>
             <h2 id="sous_titre_decouvrez">Découvrez des restaurants d'exception séléctionnés par nos soins.</h2>
 
-            <button id="button_explore">
+            <div id="button_explore">
                 <a href="#restaurants">Explorer nos restaurants</a>
-            </button>
+            </div>
 
         </div>
 
@@ -102,7 +102,7 @@
                         <defs>
 
 
-                            <linearGradient id="grad2" x1="0%" y1="0%" x2="0%" y2="100%">
+                            <linearGradient id="grad1" x1="0%" y1="0%" x2="0%" y2="100%">
                                 <stop offset="0%" style="stop-color:#9356DC;stop-opacity:1" />
                                 <stop offset="100%" style="stop-color:#FF79DA ;stop-opacity:1" />
                             </linearGradient>
@@ -172,7 +172,7 @@
                         <defs>
 
 
-                            <linearGradient id="grad2" x1="0%" y1="0%" x2="0%" y2="100%">
+                            <linearGradient id="grad3" x1="0%" y1="0%" x2="0%" y2="100%">
                                 <stop offset="0%" style="stop-color:#9356DC;stop-opacity:1" />
                                 <stop offset="100%" style="stop-color:#FF79DA ;stop-opacity:1" />
                             </linearGradient>
@@ -207,7 +207,7 @@
                         <defs>
 
 
-                            <linearGradient id="grad2" x1="0%" y1="0%" x2="0%" y2="100%">
+                            <linearGradient id="grad4" x1="0%" y1="0%" x2="0%" y2="100%">
                                 <stop offset="0%" style="stop-color:#9356DC;stop-opacity:1" />
                                 <stop offset="100%" style="stop-color:#FF79DA ;stop-opacity:1" />
                             </linearGradient>
