--- a/restaurant_1.html
+++ b/restaurant_1.html
@@ -56,7 +56,7 @@
                     <div class="entrees">
                         <h3>ENTRÉES</h3>
                         <hr />
-                        <button class="entree_element element_1">
+                        <div class="button entree_element element_1">
                             <div class="titre_element">
                                 <h2>Fricassée d'escargot</h2>
                                 <h3>Au piment d'espelette</h3>
@@ -69,8 +69,8 @@
                             </div>
 
 
-                        </button>
-                        <button class="entree_element element_2">
+                        </div>
+                        <div class="button entree_element element_2">
                             <div class="titre_element">
                                 <h2>fois gras de canard mi-cuit</h2>
                                 <h3>et ses copeaux de truffe noire</h3>
@@ -81,8 +81,8 @@
                             <div class="green">
                                 <img class="logo_check" src="logo/check-circle-solid.svg" alt="check">
                             </div>
-                        </button>
-                        <button class="entree_element element_3">
+                        </div>
+                        <div class="button entree_element element_3">
                             <div class="titre_element">
                                 <h2>Oeuf au plat</h2>
                                 <h3>Assaisonné à la truffe sur lit de caviar</h3>
@@ -93,12 +93,12 @@
                             <div class="green">
                                 <img class="logo_check" src="logo/check-circle-solid.svg" alt="check">
                             </div>
-                        </button>
+                        </div>
                     </div>
                     <div class="plats">
                         <h3>PLATS</h3>
                         <hr />
-                        <button class="plats_element  element_1">
+                        <div class="button plats_element  element_1">
                             <div class="titre_element">
                                 <h2>Filet de boeuf aux herbes</h2>
                                 <h3>Accompagné de sa ribambelle de légumes</h3>
@@ -111,8 +111,8 @@
                             </div>
 
 
-                        </button>
-                        <button class="plats_element element_2">
+                        </div>
+                        <div class="button plats_element element_2">
                             <div class="titre_element">
                                 <h2>Parmentier de queue de boeuf</h2>
                                 <h3>À la truffe noire sur sa purée de panais</h3>
@@ -123,8 +123,8 @@
                             <div class="green">
                                 <img class="logo_check" src="logo/check-circle-solid.svg" alt="check">
                             </div>
-                        </button>
-                        <button class="plats_element element_3">
+                        </div>
+                        <div class="button plats_element element_3">
                             <div class="titre_element">
                                 <h2>Filet de turbot</h2>
                                 <h3>Aux agrumes</h3>
@@ -135,12 +135,12 @@
                             <div class="green">
                                 <img class="logo_check" src="logo/check-circle-solid.svg" alt="check">
                             </div>
-                        </button>
+                        </div>
                     </div>
                     <div class="desserts">
                         <h3>DESSERTS</h3>
                         <hr />
-                        <button class="desserts_element  element_1">
+                        <div class="button desserts_element  element_1">
                             <div class="titre_element">
                                 <h2>Paris-Brest</h2>
                                 <h3>Revisité</h3>
@@ -153,8 +153,8 @@
                             </div>
 
 
-                        </button>
-                        <button class="desserts_element element_2">
+                        </div>
+                        <div class="button desserts_element element_2">
                             <div class="titre_element">
                                 <h2> Macaron au chocolat d'exception </h2>
                                 <h3>Et glace à la vanille de Madagascar</h3>
@@ -165,8 +165,8 @@
                             <div class="green">
                                 <img class="logo_check" src="logo/check-circle-solid.svg" alt="check">
                             </div>
-                        </button>
-                        <button class="desserts_element element_3">
+                        </div>
+                        <div class="button desserts_element element_3">
                             <div class="titre_element">
                                 <h2>Mousse au chocolat</h2>
                                 <h3>Au piment d'Espelette et à la truffe noire</h3>
@@ -177,14 +177,14 @@
                             <div class="green">
                                 <img class="logo_check" src="logo/check-circle-solid.svg" alt="check">
                             </div>
-                        </button>
+                        </div>
                     </div>
                 </div>
 
             </div>
-            <button id="button_explore" class="button_commander">
+            <div id="button_explore" class="button button_commander">
                 <a href="#">Commander</a>
-            </button>
+            </div>
         </div>
 
 
