changement police mentions legales, changement adresse contact

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
         </div>
 
         <h2>Mentions légales</h2>
-        <a class="lien_contact" href="mailto:alexistroitzky@gmail.com">
+        <a class="lien_contact" href="mailto:ohmyfood.contact@mail.fr">
             <h2>Contact</h2>
         </a>
 
