--- a/restaurant_3.html
+++ b/restaurant_3.html
@@ -205,7 +205,7 @@
         </div>
 
         <h1>Mentions légales</h1>
-        <a  class="lien_contact" href="mailto:alexistroitzky@gmail.com">
+        <a  class="lien_contact" href="mailto:ohmyfood.contact@mail.fr">
             <h2>Contact</h2>
         </a>
 
