--- a/restaurant_2.html
+++ b/restaurant_2.html
@@ -55,7 +55,7 @@
                     <div class="entrees">
                         <h3>ENTRÉES</h3>
                         <hr />
-                        <button class="entree_element element_1">
+                        <div class="button entree_element element_1">
                             <div class="titre_element">
                                 <h2>Ravioles de foie gras </h2>
                                 <h3>Accompagnés de leur crème à la truffe</h3>
@@ -68,8 +68,8 @@
                             </div>
 
 
-                        </button>
-                        <button class="entree_element element_2">
+                        </div>
+                        <div class="button entree_element element_2">
                             <div class="titre_element">
                                 <h2>Caviar osciètre</h2>
                                 <h3>Sur blini à la farine de blé noir</h3>
@@ -80,8 +80,8 @@
                             <div class="green">
                                 <img class="logo_check" src="logo/check-circle-solid.svg" alt="check">
                             </div>
-                        </button>
-                        <button class="entree_element element_3">
+                        </div>
+                        <div class="button entree_element element_3">
                             <div class="titre_element">
                                 <h2>Homard et espuma de potiron</h2>
                                 <h3>Mariné aux zestes d'orange</h3>
@@ -92,9 +92,9 @@
                             <div class="green">
                                 <img class="logo_check" src="logo/check-circle-solid.svg" alt="check">
                             </div>
-                        </button>
+                        </div>
 
-                        <button class="entree_element element_4">
+                        <div class="button entree_element element_4">
                             <div class="titre_element">
                                 <h2>Foie gras de canard cuit entier</h2>
                                 <h3>Confiture de figue et pain toasté</h3>
@@ -105,12 +105,12 @@
                             <div class="green">
                                 <img class="logo_check" src="logo/check-circle-solid.svg" alt="check">
                             </div>
-                        </button>
+                        </div>
                     </div>
                     <div class="plats">
                         <h3>PLATS</h3>
                         <hr />
-                        <button class="plats_element  element_1">
+                        <div class="button plats_element  element_1">
                             <div class="titre_element">
                                 <h2>Noix de coquilles Saint-Jacques</h2>
                                 <h3>Sur lit de purée de céleri-rave</h3>
@@ -123,8 +123,8 @@
                             </div>
 
 
-                        </button>
-                        <button class="plats_element element_2">
+                        </div>
+                        <div class=" button plats_element element_2">
                             <div class="titre_element">
                                 <h2>Langoustine poêlée</h2>
                                 <h3>Purée de patate douce</h3>
@@ -135,8 +135,8 @@
                             <div class="green">
                                 <img class="logo_check" src="logo/check-circle-solid.svg" alt="check">
                             </div>
-                        </button>
-                        <button class="plats_element element_3">
+                        </div>
+                        <div class="button plats_element element_3">
                             <div class="titre_element">
                                 <h2>Mijoté de queue de boeuf </h2>
                                 <h3>Et riz sauvage aux zestes de citron</h3>
@@ -147,12 +147,12 @@
                             <div class="green">
                                 <img class="logo_check" src="logo/check-circle-solid.svg" alt="check">
                             </div>
-                        </button>
+                        </div>
                     </div>
                     <div class="desserts">
                         <h3>DESSERTS</h3>
                         <hr />
-                        <button class="desserts_element  element_1">
+                        <div class="button desserts_element  element_1">
                             <div class="titre_element">
                                 <h2>Macaron noisette et chocolat</h2>
                                 <h3>Glace au caramel brun et sel de Guérande</h3>
@@ -165,8 +165,8 @@
                             </div>
 
 
-                        </button>
-                        <button class="desserts_element element_2">
+                        </div>
+                        <div class="button desserts_element element_2">
                             <div class="titre_element">
                                 <h2>Baba au rhum revisité </h2>
                                 <h3>Avec son coulis de citron</h3>
@@ -177,8 +177,8 @@
                             <div class="green">
                                 <img class="logo_check" src="logo/check-circle-solid.svg" alt="check">
                             </div>
-                        </button>
-                        <button class="desserts_element element_3">
+                        </div>
+                        <div class="button desserts_element element_3">
                             <div class="titre_element">
                                 <h2>Tarte au citron meringuée </h2>
                                 <h3>Déstructurée</h3>
@@ -189,13 +189,13 @@
                             <div class="green">
                                 <img class="logo_check" src="logo/check-circle-solid.svg" alt="check">
                             </div>
-                        </button>
+                        </div>
                     </div>
                 </div>
             </div>
-            <button id="button_explore" class="button_commander">
+            <div id="button_explore" class="button button_commander">
                 <a href="#">Commander</a>
-            </button>
+            </div>
         </div>
 
 
