changement button div.button restauran_3, ajout fichier media queries

--- a/restaurant_4.html
+++ b/restaurant_4.html
@@ -56,7 +56,7 @@
                     <div class="entrees">
                         <h3>ENTRÉES</h3>
                         <hr />
-                        <button class="entree_element element_1">
+                        <div class="button entree_element element_1">
                             <div class="titre_element">
                                 <h2>Tartare de thon</h2>
                                 <h3>Assaisonné au yuzu</h3>
@@ -69,8 +69,8 @@
                             </div>
 
 
-                        </button>
-                        <button class="entree_element element_2">
+                        </div>
+                        <div class="button entree_element element_2">
                             <div class="titre_element">
                                 <h2>Bouchée de homard croustillant</h2>
                                 <h3>Et sa farandole de petits légumes</h3>
@@ -81,8 +81,8 @@
                             <div class="green">
                                 <img class="logo_check" src="logo/check-circle-solid.svg" alt="check">
                             </div>
-                        </button>
-                        <button class="entree_element element_3">
+                        </div>
+                        <div class="button entree_element element_3">
                             <div class="titre_element">
                                 <h2>Velouté de cèpes</h2>
                                 <h3>Aux truffes</h3>
@@ -93,12 +93,12 @@
                             <div class="green">
                                 <img class="logo_check" src="logo/check-circle-solid.svg" alt="check">
                             </div>
-                        </button>
+                        </div>
                     </div>
                     <div class="plats">
                         <h3>PLATS</h3>
                         <hr />
-                        <button class="plats_element  element_1">
+                        <div class="button plats_element  element_1">
                             <div class="titre_element">
                                 <h2>Poulet rôti aux herbes de Provence</h2>
                                 <h3>Et sa crème de truffe</h3>
@@ -111,8 +111,8 @@
                             </div>
 
 
-                        </button>
-                        <button class="plats_element element_2">
+                        </div>
+                        <div class="button plats_element element_2">
                             <div class="titre_element">
                                 <h2>Langouste rôtie</h2>
                                 <h3>Et ses légumes de saison</h3>
@@ -123,8 +123,8 @@
                             <div class="green">
                                 <img class="logo_check" src="logo/check-circle-solid.svg" alt="check">
                             </div>
-                        </button>
-                        <button class="plats_element element_3">
+                        </div>
+                        <div class="button plats_element element_3">
                             <div class="titre_element">
                                 <h2>Côte de boeuf Angus </h2>
                                 <h3>Et sa purée de panais</h3>
@@ -135,12 +135,12 @@
                             <div class="green">
                                 <img class="logo_check" src="logo/check-circle-solid.svg" alt="check">
                             </div>
-                        </button>
+                        </div>
                     </div>
                     <div class="desserts">
                         <h3>DESSERTS</h3>
                         <hr />
-                        <button class="desserts_element  element_1">
+                        <div class="button desserts_element  element_1">
                             <div class="titre_element">
                                 <h2>Farandole de desserts</h2>
                                 <h3>Du chef</h3>
@@ -153,8 +153,8 @@
                             </div>
 
 
-                        </button>
-                        <button class="desserts_element element_2">
+                        </div>
+                        <div class="button desserts_element element_2">
                             <div class="titre_element">
                                 <h2>Crème brulée </h2>
                                 <h3>Revisitée</h3>
@@ -165,8 +165,8 @@
                             <div class="green">
                                 <img class="logo_check" src="logo/check-circle-solid.svg" alt="check">
                             </div>
-                        </button>
-                        <button class="desserts_element element_3">
+                        </div>
+                        <div class="button desserts_element element_3">
                             <div class="titre_element">
                                 <h2>Tiramisu</h2>
                                 <h3>À la noisette</h3>
@@ -177,13 +177,13 @@
                             <div class="green">
                                 <img class="logo_check" src="logo/check-circle-solid.svg" alt="check">
                             </div>
-                        </button>
+                        </div>
                     </div>
                 </div>
             </div>
-            <button id="button_explore" class="button_commander">
+            <div id="button_explore" class="button button_commander">
                 <a href="#">Commander</a>
-            </button>
+            </div>
         </div>
 
 
