ajustement margin bottom h2 element

--- a/restaurant_1.html
+++ b/restaurant_1.html
@@ -86,7 +86,7 @@
                                 <h3>35€</h3>
                             </div>
                             <div class="green">
-                                <img class="logo_check" src="logo/check-circle-solid.svg" alt="check">
+                                <i class="fas fa-check-circle fa-2x"></i>
                             </div>
                         </div>
                         <div class="button entree_element element_3">
@@ -98,7 +98,7 @@
                                 <h3>20€</h3>
                             </div>
                             <div class="green">
-                                <img class="logo_check" src="logo/check-circle-solid.svg" alt="check">
+                                <i class="fas fa-check-circle fa-2x"></i>
                             </div>
                         </div>
                     </div>
@@ -114,7 +114,7 @@
                                 <h3>40€</h3>
                             </div>
                             <div class="green">
-                                <img class="logo_check" src="logo/check-circle-solid.svg" alt="check">
+                                <i class="fas fa-check-circle fa-2x"></i>
                             </div>
 
 
@@ -156,7 +156,7 @@
                                 <h3>18€</h3>
                             </div>
                             <div class="green">
-                                <img class="logo_check" src="logo/check-circle-solid.svg" alt="check">
+                                <i class="fas fa-check-circle fa-2x"></i>
                             </div>
 
 
@@ -170,7 +170,7 @@
                                 <h3>22€</h3>
                             </div>
                             <div class="green">
-                                <img class="logo_check" src="logo/check-circle-solid.svg" alt="check">
+                                <i class="fas fa-check-circle fa-2x"></i>
                             </div>
                         </div>
                         <div class="button desserts_element element_3">
@@ -182,7 +182,7 @@
                                 <h3>23€</h3>
                             </div>
                             <div class="green">
-                                <img class="logo_check" src="logo/check-circle-solid.svg" alt="check">
+                                <i class="fas fa-check-circle fa-2x"></i>
                             </div>
                         </div>
                     </div>
