creation titre menu, import bouton commander, creation mixin reset margin padding

--- a/restaurant_1.html
+++ b/restaurant_1.html
@@ -197,15 +197,23 @@
 
     </section>
 
-<!-- nouveau contenu en constructioun DEBUT -->
+    <!-- nouveau contenu en constructioun DEBUT -->
     <section class="contenu">
         <img src="images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="palette du gout photo">
         <div class="menu_fond_gris">
-            
+
+            <h2 class="titre_principal_menu">La palette du goût</h2>
+
+            <h3 class="titre_e_p_d">ENTRÉES</h3>
+
+            <div id="button_explore" class="button button_commander">
+                <a href="#">Commander</a>
+            </div>
+
         </div>
     </section>
 
-<!-- nouveau contenu en constructioun FIN -->
+    <!-- nouveau contenu en constructioun FIN -->
 
 
 
