--- a/restaurant_1.html
+++ b/restaurant_1.html
@@ -206,7 +206,7 @@
 
             <h3 class="titre_e_p_d">ENTRÉES</h3>
 
-            <div id="button_explore" class="button button_commander">
+            <div id="button_explore" class="button button_commander rose_menu">
                 <a href="#">Commander</a>
             </div>
 
