ajout hr sous entree, mise de entree et hr dans div,

--- a/restaurant_1.html
+++ b/restaurant_1.html
@@ -204,7 +204,10 @@
 
             <h2 class="titre_principal_menu">La palette du goût</h2>
 
-            <h3 class="titre_e_p_d">ENTRÉES</h3>
+            <div class="titre_ligne_verte">
+                <h3 class="titre_e_p_d">ENTRÉES</h3>
+                <hr class="ligne_verte"/>
+            </div>
 
             <div id="button_explore" class="button button_commander rose_menu">
                 <a href="#">Commander</a>
