--- a/restaurant_1.html
+++ b/restaurant_1.html
@@ -202,11 +202,14 @@
         <img src="images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="palette du gout photo">
         <div class="menu_fond_gris">
 
-            <h2 class="titre_principal_menu">La palette du goût</h2>
+            <div class="conteneur_titre_coeur">
+                <h2 class="titre_principal_menu">La palette du goût</h2>
+                <i class="far fa-heart fa-3x"></i>
+            </div>
 
             <div class="titre_ligne_verte">
                 <h3 class="titre_e_p_d">ENTRÉES</h3>
-                <hr class="ligne_verte"/>
+                <hr class="ligne_verte" />
             </div>
 
             <div id="button_explore" class="button button_commander rose_menu">
