renommer classe bouton

--- a/restaurant_1.html
+++ b/restaurant_1.html
@@ -212,7 +212,7 @@
                 <hr class="ligne_verte" />
             </div>
 
-            <div id="button_explore" class="button button_commander rose_menu">
+            <div id="button_explore" class="button button_commander bouton_rose_menu">
                 <a href="#">Commander</a>
             </div>
 
