edition classe conteneur_titre_ligne_verte

--- a/restaurant_1.html
+++ b/restaurant_1.html
@@ -207,7 +207,7 @@
                 <i class="far fa-heart fa-3x"></i>
             </div>
 
-            <div class="titre_ligne_verte">
+            <div class="conteneur_titre_ligne_verte">
                 <h3 class="titre_e_p_d">ENTRÉES</h3>
                 <hr class="ligne_verte" />
             </div>
