--- a/restaurant_1.html
+++ b/restaurant_1.html
@@ -225,6 +225,19 @@
                     
                 </div>
             </div>
+            <div class="conteneur_E_P_D">
+                <div class="conteneur_E_P_D_niveau_1">
+                    <div class="conteneur_titre_et_description">
+                        <h2 class="titre_food">Fricassée d'escargot</h2>
+                        <h3 class="description">Au piment d'Espelette</h3>
+                    </div>
+
+                    <div class="conteneur_prix">
+                        <h2>25€</h2>
+                    </div>
+                    
+                </div>
+            </div>
 
             <div id="button_explore" class="button button_commander bouton_rose_menu">
                 <a href="#">Commander</a>
