--- a/restaurant_1.html
+++ b/restaurant_1.html
@@ -204,7 +204,10 @@
 
             <div class="conteneur_titre_coeur">
                 <h2 class="titre_principal_menu">La palette du goût</h2>
-                <i class="far fa-heart fa-3x"></i>
+                <div class="conteneur_coeur">
+                    <i class="far fa-heart fa-3x premier_coeur"></i>
+                    <i class="fas fa-heart fa-3x deuxieme_coeur"></i>
+                </div>
             </div>
 
             <div class="conteneur_titre_ligne_verte">
